new length detection for non-string in UNION (BUG#4067)